--- a/css/features.css
+++ b/css/features.css
@@ -30,13 +30,14 @@
 
 .features__list {
   counter-reset: features__item 0;
-  max-width: 800px;
+  max-width: 934px;
   margin: 0 auto;
   padding: 0;
 
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   gap: 50px;
 }
 
