--- a/css/header.css
+++ b/css/header.css
@@ -24,12 +24,11 @@
 
   max-width: 1230px;
   margin: 0 auto;
-  padding-top: 40px;
-  padding-bottom: 120px;
 }
 
 .header__nav {
   margin-bottom: 120px;
+  padding-top: 40px;
 }
 
 .nav__logo {
@@ -45,6 +44,7 @@
 
 .nav__contacts {
   max-width: 208px;
+  height: 52px;
   text-align: center;
 }
 
@@ -63,6 +63,10 @@
 }
 
 .header__inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
   max-width: 990px;
   min-height: 384px;
   margin: 0 auto;
@@ -77,7 +81,7 @@
 
   text-align: center;
   font-size: 52px;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 .header__text {
@@ -92,6 +96,7 @@
 }
 
 .header__button {
+  margin: 0 auto;
   padding: 12px 48px;
   font-size: 20px;
   font-weight: 500;
