--- a/css/media.css
+++ b/css/media.css
@@ -136,6 +136,12 @@
   }
 }
 
+@media (max-width: 768px) {
+  .features__list {
+    justify-content: center;
+  }
+}
+
 @media (max-width: 320px) {
   .container {
       max-width: 290px;
