--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url(./normalize.css);
 @import url(./fonts);
+@import url(./global.css);
 @import url(./main.css);
 @import url(./header.css);
 @import url(./features.css);
