--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url(./global.css);
 @import url(./main.css);
 @import url(./header.css);
+@import url(./top.css);
 @import url(./features.css);
 @import url(./contacts.css);
 @import url(./form.css);
