--- a/css/header.css
+++ b/css/header.css
@@ -1,34 +1,19 @@
 .header {
-  position: relative;
-  min-height: 732px;
+ position: absolute;
+ z-index: 100;
 
-  background-image: url(../img/stag-office-mockup.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.header::before {
-  position: absolute;
-  content: "";
-
-  width: 100%;
-  height: 100%;
-
-  background-color: rgba(47, 50, 75, 0.85);
+ width: 100%;
+ padding-top: 40px;
+ padding-bottom: 40px;
+ background-color: transparent;
 }
 
 .header__container {
-  position: relative;
-  z-index: 100;
-
-  max-width: 1230px;
-  margin: 0 auto;
+ 
 }
 
 .header__nav {
-  margin-bottom: 120px;
-  padding-top: 40px;
+ 
 }
 
 .nav__logo {
@@ -60,47 +45,6 @@
   color: var(--color-white);
   font-size: 16px;
   text-decoration: underline;
-}
-
-.header__inner {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  
-  max-width: 990px;
-  min-height: 384px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.header__title {
-  margin: 0 auto;
-  margin-bottom: 35px;
-
-  color: rgba(255, 255, 255, 0.86);
-
-  text-align: center;
-  font-size: 52px;
-  font-weight: 700;
-}
-
-.header__text {
-  max-width: 908px;
-  margin: 0 auto;
-  margin-bottom: 90px;
-
-  color: rgba(255, 255, 255, 0.75);
-
-  font-size: 22px;
-  line-height: 1.2;
-}
-
-.header__button {
-  margin: 0 auto;
-  padding: 12px 48px;
-  font-size: 20px;
-  font-weight: 500;
-  text-decoration: none;
 }
 
 .nav__mobile {
