--- a/css/media.css
+++ b/css/media.css
@@ -14,18 +14,19 @@
   }
 
   .header {
-    min-height: 528px;
+    padding-top: 26px;
+    padding-bottom: 26px;
   }
 
   .header__container {
-    padding-top: 26px;
-    padding-bottom: 70px;
+   
   }
   .nav {
   }
 
   .header__nav {
-    margin-bottom: 70px;
+
+  
   }
 
   .nav__logo {
@@ -49,24 +50,29 @@
   }
   .nav__mobile-img {
   }
+
+  .top {
+    min-height: 528px;
+  }
   
-  .header__inner {
+  .top__inner {
     max-width: 780px;
     min-height: 302px;
+    padding-top: 140px;
   }
 
-  .header__title {
+  .top__title {
     font-size: 40px;
     margin-bottom: 28px;
   }
 
-  .header__text {
+  .top__text {
     max-width: 754px;
     font-size: 18px;
     margin-bottom: 54px;
   }
 
-  .header__button {
+  .top__button {
     padding: 12px 48px;
   }
 
@@ -137,42 +143,102 @@
 }
 
 @media (max-width: 768px) {
+  .header {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+
   .features__list {
     justify-content: center;
+  }
+
+  .top__inner {
+    padding-top: 115px;
+    padding-bottom: 65px;
+  }
+
+  .top__title {
+    font-size: 30px;
+  }
+
+  .top__text {
+    font-size: 16px;
+  }
+
+  .footer {
+    padding: 25px 15px;
+  }
+
+  .footer__author {
+    display: none;
+  }
+
+  .footer__bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 47px;
+    color: var(--color-white);
+    background-color: #2A2C3F;
+  }
+  
+  .footer__author--mobile {
+    display: block;
+  }
+}
+
+
+@media (max-width: 500px) {
+  .container {
+    max-width: 100%;
+    padding: 0 15px;
+}
+
+.section__title {
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.section__subtitle {
+  font-size: 16px;
+}
+
+.header {
+  padding-top: 15px;
+  padding-bottom: 0;
+}
+
+.top {
+  min-height: 440px;
+}
+
+  .top__inner {
+    padding-top: 130px;
+  }
+}
+
+@media (max-width: 480px) {
+  .header__nav {
+  
+  }
+  .contacts__form {
+    max-width: 100%;
+  }
+  .contacts__form-input {
+    max-width: 100%;
   }
 }
 
 @media (max-width: 320px) {
-  .container {
-      max-width: 290px;
-      padding: 0 15px;
-  }
-
-  .section__title {
-    font-size: 20px;
-    margin-bottom: 15px;
-  }
-
-  .section__subtitle {
-    font-size: 16px;
-  }
-
-  .header {
-    min-height: 440px;
-  }
+  
 
   .header__container {
-    padding-top: 18px;
-    padding-bottom: 65px;
+
   }
 
-  .header__inner {
-    max-width: 100%;
-    min-height: 266px;
-  }
 
   .header__nav {
-    margin-bottom: 65px;
+
   }
 
   .nav__logo {
@@ -188,17 +254,22 @@
     display: block;
   }
 
-  .header__title {
+
+  .top__inner {
+    max-width: 100%;
+    min-height: 266px;
+  }
+
+  .top__title {
     font-size: 20px;
     margin-bottom: 23px;
   }
 
-  .header__text {
+  .top__text {
     font-size: 14px;
   }
 
-  .header__button {
-    padding: 9px 19px;
+  .top__button {
     font-size: 16px;
   }
 
@@ -287,3 +358,4 @@
   margin: 0 auto;
 }
 }
+
